# Raypher-core

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  Raypher Dashboard.lnk  build.ps1  install.ps1  launch_dashboard.bat  openclaw_test.sh  output2.txt  query  start  week1_scan_results.json
.github/workflows/: release.yml
Git.reference/: Biulding.txt  Phase 2.txt  RAYPHER_COMPLETE_BUILD_PLAN.md  RAYPHER_FULL_PIPELINE.md  RAYPHER_PHASE1_3_AGENT_IMPLEMENTATION_PLAN.md  RAYPHER_PHASE1_COMPLETE_BUILD_PLAN.md  RAYPHER_PHASE2_BUILD_PLAN.md  RAYPHER_PHASE3_BUILD_PLAN.md  RAYPHER_PHASE4_AGENT_IMPLEMENTATION_PLAN.md  RAYPHER_PHASE4_BUILD_PLAN.md  RAYPHER_PHASE5_IMPLEMENTATION_PLAN.md  README.md  Raypher dashboard.txt  full picture.txt
config/: raypher.toml
deploy/: install-linux.sh  raypher.service
scripts/: build-all.sh  convert_logo.py  integration_test.py
src/: agent_registry.rs  config.rs  dashboard.rs  dashboard_spa.html  database.rs  discovery.rs  dlp.rs  event_descriptions.rs  heuristics.rs  identity.rs  installer.rs  intercept.rs  jailbreak.rs  killer.rs  lib.rs  main.rs  merkle.rs  monitor.rs  panic.rs  policy.rs  proxy.rs  safety.rs  scanner.rs  secrets.rs  service.rs  ssrf.rs  terminator.rs  tls.rs  tray.rs  trust_score.rs  updater.rs  watchdog.rs  watchtower.rs
tests/: integration_tests.rs  phase4_tests.rs  provider_tests.rs
wix/: License.rtf  main.wxs
